--- a/KeilC/Objects/STM32F407VET6.build_log.htm
+++ b/KeilC/Objects/STM32F407VET6.build_log.htm
@@ -21,12 +21,13 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.7.0
 Dialog DLL:      TCM.DLL V1.46.0.0
  
 <h2>Project:</h2>
-E:\Learn_Embedded\KeilC\STM32F407VET6.uvprojx
+E:\Learn_Embedded\STM32F4_Register\KeilC\STM32F407VET6.uvprojx
 Project File Date:  01/03/2023
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.14', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Rebuild target 'STM32F407VET6'
+compiling rcc.c...
 assembling startup_stm32f40xx.s...
 compiling main.c...
 linking...
@@ -45,7 +46,7 @@ Package Vendor: Keil
   C:\Users\MINH\AppData\Local\Arm\Packs\Keil\STM32F4xx_DFP\2.8.0\Drivers\CMSIS\Device\ST\STM32F4xx\Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:00
 </pre>
 </body>
 </html>
