--- a/KeilC/Objects/STM32F407VET6.build_log.htm
+++ b/KeilC/Objects/STM32F407VET6.build_log.htm
@@ -9,12 +9,12 @@ License Information: Minh Vu, 24H, LIC=QMZI6-DNGMZ-KDUKY-IB78R-ULX2F-ETCIY
  
 Tool Versions:
 Toolchain:       DK-ARM Developers Kit  Version: 5.31.0.0
-Toolchain Path:  C:\Keil_v5\ARM\ARMCLANG\Bin
-C Compiler:      ArmClang.exe V6.14
-Assembler:       Armasm.exe V6.14
-Linker/Locator:  ArmLink.exe V6.14
-Library Manager: ArmAr.exe V6.14
-Hex Converter:   FromElf.exe V6.14
+Toolchain Path:  C:\Keil_v5\ARM\ARMCC\Bin
+C Compiler:      Armcc.exe V5.06 update 6 (build 750)
+Assembler:       Armasm.exe V5.06 update 6 (build 750)
+Linker/Locator:  ArmLink.exe V5.06 update 6 (build 750)
+Library Manager: ArmAr.exe V5.06 update 6 (build 750)
+Hex Converter:   FromElf.exe V5.06 update 6 (build 750)
 CPU DLL:         SARMCM3.DLL V5.31.0.0
 Dialog DLL:      DCM.DLL V1.17.3.0
 Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.7.0
@@ -22,16 +22,16 @@ Dialog DLL:      TCM.DLL V1.46.0.0
  
 <h2>Project:</h2>
 E:\Learn_Embedded\STM32F4_Register\KeilC\STM32F407VET6.uvprojx
-Project File Date:  01/03/2023
+Project File Date:  01/04/2023
 
 <h2>Output:</h2>
-*** Using Compiler 'V6.14', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
+*** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Rebuild target 'STM32F407VET6'
-compiling rcc.c...
 assembling startup_stm32f40xx.s...
+compiling rcc.c...
 compiling main.c...
 linking...
-Program Size: Code=352 RO-data=408 RW-data=0 ZI-data=1632  
+Program Size: Code=336 RO-data=408 RW-data=0 ZI-data=1632  
 FromELF: creating hex file...
 ".\Objects\STM32F407VET6.axf" - 0 Error(s), 0 Warning(s).
 
@@ -46,7 +46,7 @@ Package Vendor: Keil
   C:\Users\MINH\AppData\Local\Arm\Packs\Keil\STM32F4xx_DFP\2.8.0\Drivers\CMSIS\Device\ST\STM32F4xx\Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
